--- a/jupyter_notebook/Parcel delineation.ipynb
+++ b/jupyter_notebook/Parcel delineation.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "## Authentication\n",
     "\n",
-    "We first need to connect to openEO. For the LPS demo, we will provide you with a username and password. However, if you want to make use of openEO after the demo, you need an account.\n",
+    "We first need to connect to openEO. If your organisation belongs to a federated authentication service such as EduGAIN or EGI, you can connect using your own credentials through EGI Check in.\n",
     "\n",
     "If you do not have an account yet, openEO platform has free trials:\n",
     "https://docs.openeo.cloud/join/free_trial.html#step-2-join-openeo-platform-virtual-organization\n",
