Simplification clear image selection + adding pathlib import

--- a/jupyter_notebook/Openeo basics.ipynb
+++ b/jupyter_notebook/Openeo basics.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4cafdcf2",
    "metadata": {},
    "outputs": [
@@ -44,12 +44,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9.1\n"
+      "0.9.3a2\n"
      ]
     }
    ],
    "source": [
     "import openeo\n",
+    "from pathlib import Path\n",
     "\n",
     "print(openeo.client_version())\n",
     "base_path = Path(\"results/basics\")"
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a3221872",
    "metadata": {},
    "outputs": [
@@ -65,7 +66,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Authenticated using refresh token.\n"
+      "To authenticate: visit https://aai.egi.eu/oidc/device and enter the user code 'jgIrNe'.\n",
+      "Authorized successfully.\n",
+      "Authenticated using device code flow.\n"
      ]
     }
    ],
@@ -85,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "dcb33972",
    "metadata": {},
    "outputs": [],
@@ -93,7 +96,7 @@
     "s2_cube = connection.load_collection(\n",
     "    \"SENTINEL2_L2A\",\n",
     "    spatial_extent={\"west\":5.1,\"east\":5.2,\"south\":51.1,\"north\":51.2},\n",
-    "    temporal_extent=[\"2020-01-01\",\"2020-12-31\"],\n",
+    "    temporal_extent=[\"2020-01-01\",\"2020-01-31\"],\n",
     "    bands=[\"B02\",\"B04\",\"B08\"]\n",
     ")"
    ]
@@ -121,12 +124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1e99b02b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "s2_cube.max_time().download(str(base_path / \"s2_cube_syn.tif\")),format=\"Gtiff\")"
+    "s2_cube.max_time().download(str(base_path / \"s2_cube_syn.tif\"),format=\"Gtiff\")"
    ]
   },
   {
@@ -235,12 +238,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "0480abad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "b2_filtered_cropped = s2_cube.filter_temporal([\"2020-02-01\",\"2020-02-28\"]).band(\"B02\").filter_bbox(west=5.15,east=5.16,south=51.14,north=51.16, crs=4326)"
+    "b2_filtered_cropped = s2_cube.filter_temporal([\"2020-01-01\",\"2020-01-10\"]).band(\"B02\").filter_bbox(west=5.15,east=5.16,south=51.14,north=51.16, crs=4326)"
    ]
   },
   {
@@ -253,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "c837b822",
    "metadata": {},
    "outputs": [],
